add_subdirectory(agrep)
add_subdirectory(gnugo)
if((NOT "${ARCH}" STREQUAL "Sparc") AND (NOT "${ARCH}" STREQUAL "Alpha"))
  # FIXME_PROTO: add_subdirectory(bison)
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  # FIXME_PROTO: add_subdirectory(TimberWolfMC)
  add_subdirectory(allroots)
  # FIXME_PROTO: add_subdirectory(assembler)
  add_subdirectory(cdecl)
  add_subdirectory(compiler)
  add_subdirectory(fixoutput)
  add_subdirectory(football)
  # FIXME_PROTO: add_subdirectory(loader)
  # FIXME_PROTO: add_subdirectory(plot2fig)
  # FIXME_PROTO: add_subdirectory(simulator)
  # FIXME_PROTO: add_subdirectory(unix-tbl)
  if(NOT "${ARCH}" STREQUAL "XCore")
    # FIXME_PROTO: add_subdirectory(archie-client)
    # FIXME_PROTO: add_subdirectory(unix-smail)
  endif()
endif()
